Revert "fixed safari bug with overflow-y"
This reverts commit 77139bb84f9b4848b2f082a570d9501a1b93eb92.

--- a/css/main.css
+++ b/css/main.css
@@ -379,7 +379,7 @@ h4 {
 
 .topnav--visible .topnav__social-icons {
   position: absolute;
-  bottom: 5rem;
+  bottom: 3rem;
 }
 
 .topnav--visible .topnav__social-icons > *:first-child {
