--- a/scss/components/_header.scss
+++ b/scss/components/_header.scss
@@ -80,7 +80,7 @@
 
     &__social-icons {
       position: absolute;
-      bottom: 5rem;
+      bottom: 3rem;
 
       > *:first-child {
         margin-right: 2rem;
